[package]
name = "btest-rs"
version = "0.1.0"
edition = "2021"
description = "High-performance MikroTik bandwidth-test (btest) protocol server"
license = "BSD-2-Clause"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
byteorder = "1"

[profile.release]
opt-level = 3
lto = true
