[package]
name = "btest-rs"
version = "0.1.0"
edition = "2021"
description = "High-performance MikroTik bandwidth-test (btest) protocol server"
license = "BSD-2-Clause"

repository = "https://github.com/jof/btest-rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"  # Intentional in protocol byte extraction
cast_lossless = "allow"             # u8/u16 -> u32 casts are clear enough
ignored_unit_patterns = "allow"     # tokio::select! generates these
too_many_lines = "allow"            # Async server handlers are naturally long
wildcard_imports = "allow"          # Used for protocol::*

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
byteorder = "1"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
